--- a/mousepad/mousepad-prefs-dialog.glade
+++ b/mousepad/mousepad-prefs-dialog.glade
@@ -679,6 +679,127 @@
           </packing>
         </child>
         <child>
+          <object class="GtkFrame" id="/prefs/window/toolbar/frame">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="label_xalign">0</property>
+            <property name="shadow_type">none</property>
+            <child>
+              <object class="GtkAlignment" id="/prefs/window/toolbar/alignment1">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="top_padding">6</property>
+                <property name="bottom_padding">6</property>
+                <property name="left_padding">12</property>
+                <property name="right_padding">6</property>
+                <child>
+                  <object class="GtkTable" id="/prefs/window/toolbar/table">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="n_rows">3</property>
+                    <property name="n_columns">2</property>
+                    <property name="column_spacing">6</property>
+                    <property name="row_spacing">6</property>
+                    <child>
+                      <object class="GtkCheckButton" id="/prefs/window/toolbar/visible-check">
+                        <property name="label" translatable="yes">Show toolbar</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="draw_indicator">True</property>
+                      </object>
+                      <packing>
+                        <property name="right_attach">2</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLabel" id="/prefs/window/toolbar/style-label">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="xalign">0</property>
+                        <property name="label" translatable="yes">Style:</property>
+                      </object>
+                      <packing>
+                        <property name="top_attach">1</property>
+                        <property name="bottom_attach">2</property>
+                        <property name="x_options">GTK_FILL</property>
+                        <property name="y_options">GTK_FILL</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLabel" id="/prefs/window/toolbar/icon-size-label">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="xalign">0</property>
+                        <property name="label" translatable="yes">Icon Size:</property>
+                      </object>
+                      <packing>
+                        <property name="top_attach">2</property>
+                        <property name="bottom_attach">3</property>
+                        <property name="x_options">GTK_FILL</property>
+                        <property name="y_options">GTK_FILL</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkComboBox" id="/prefs/window/toolbar/style-combo">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="model">/prefs/window/toolbar/style-model</property>
+                        <property name="active">0</property>
+                        <child>
+                          <object class="GtkCellRendererText" id="/prefs/window/toolbar/style/cellrenderer"/>
+                          <attributes>
+                            <attribute name="text">1</attribute>
+                          </attributes>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="right_attach">2</property>
+                        <property name="top_attach">1</property>
+                        <property name="bottom_attach">2</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkComboBox" id="/prefs/window/toolbar/icon-size-combo">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="model">/prefs/window/toolbar/icon-size-model</property>
+                        <property name="active">0</property>
+                        <child>
+                          <object class="GtkCellRendererText" id="/prefs/window/toolbar/icon-size/cellrenderer1"/>
+                          <attributes>
+                            <attribute name="text">1</attribute>
+                          </attributes>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="right_attach">2</property>
+                        <property name="top_attach">2</property>
+                        <property name="bottom_attach">3</property>
+                      </packing>
+                    </child>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child type="label">
+              <object class="GtkLabel" id="/prefs/window/toolbar/label1">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">&lt;b&gt;Toolbar&lt;/b&gt;</property>
+                <property name="use_markup">True</property>
+              </object>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
           <object class="GtkFrame" id="/prefs/window/notebook/frame">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
@@ -742,7 +863,7 @@
           <packing>
             <property name="expand">False</property>
             <property name="fill">True</property>
-            <property name="position">1</property>
+            <property name="position">2</property>
           </packing>
         </child>
       </object>
@@ -761,5 +882,65 @@
         <property name="tab_fill">False</property>
       </packing>
     </child>
+  </object>
+  <object class="GtkListStore" id="/prefs/window/toolbar/icon-size-model">
+    <columns>
+      <!-- column-name size -->
+      <column type="GtkIconSize"/>
+      <!-- column-name name -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0">menu</col>
+        <col id="1" translatable="yes">Menu</col>
+      </row>
+      <row>
+        <col id="0">small-toolbar</col>
+        <col id="1" translatable="yes">Small Toolbar</col>
+      </row>
+      <row>
+        <col id="0">large-toolbar</col>
+        <col id="1" translatable="yes">Large Toolbar</col>
+      </row>
+      <row>
+        <col id="0">button</col>
+        <col id="1" translatable="yes">Button</col>
+      </row>
+      <row>
+        <col id="0">dnd</col>
+        <col id="1" translatable="yes">Drag &amp; Drop</col>
+      </row>
+      <row>
+        <col id="0">dialog</col>
+        <col id="1" translatable="yes">Dialog</col>
+      </row>
+    </data>
+  </object>
+  <object class="GtkListStore" id="/prefs/window/toolbar/style-model">
+    <columns>
+      <!-- column-name style -->
+      <column type="GtkToolbarStyle"/>
+      <!-- column-name name -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0">icons</col>
+        <col id="1" translatable="yes">Icons Only</col>
+      </row>
+      <row>
+        <col id="0">text</col>
+        <col id="1" translatable="yes">Text Only</col>
+      </row>
+      <row>
+        <col id="0">both</col>
+        <col id="1" translatable="yes">Text Below Icons</col>
+      </row>
+      <row>
+        <col id="0">both-horiz</col>
+        <col id="1" translatable="yes">Text Beside Icons</col>
+      </row>
+    </data>
   </object>
 </interface>
