--- a/mousepad/mousepad-prefs-dialog.glade
+++ b/mousepad/mousepad-prefs-dialog.glade
@@ -43,7 +43,8 @@
     </data>
   </object>
   <object class="GtkAdjustment" id="/prefs/editor/tab-width-adjustment">
-    <property name="upper">128</property>
+    <property name="lower">1</property>
+    <property name="upper">32</property>
     <property name="value">8</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
